generated jhipster_upgrade using JHipster 8.11.0